# engineering_toolkit

./: README.md  log_analysis.md  skills-references.md
skills/agent-design-reviewer/: SKILL.md
skills/ai-project-reviewer/: SKILL.md
skills/daily-summary/: SKILL.md
skills/data-assessment-expert/: SKILL.md
skills/data-quality-auditor/: SKILL.md
skills/deep-reading-assistant/: SKILL.md
skills/deep-reading-assistant/references/: article-analysis.md  guided-reading.md  knowledge-export.md
skills/etl-review-expert/: SKILL.md
skills/gitlab/: SKILL.md
skills/gitlab/references/: check-pipeline.md  ci-cd-components.md  ci-cd-editing.md  issues.md  merge-requests.md  project-management.md  releases.md
skills/gitlab/scripts/: check-pipeline.sh  gitlab.sh  init-component.sh
skills/jira/: SKILL.md
skills/jira/references/: comments.md  create.md  discover.md  enrich.md  extract.md  formatting.md  links.md  search.md  update.md  worklog.md
skills/jira/scripts/: jira.sh
skills/kata-creator/: SKILL.md
skills/learn-by-asking/: SKILL.md
skills/optimize-dockerfile/: SKILL.md
skills/paper-reviewer/: SKILL.md
skills/rag-architect/: SKILL.md
skills/system-design-reviewer/: SKILL.md
tools/: api_development.md  code_quality.md  container.md  python_development.md  system_monitoring.md  terminal.md  testing.md
windows_setup/: windows_macos_env_guide.md  windows_setup_guide.md
workspaces/: .env.example  Makefile  README.md  docker-compose.yml
workspaces/base-python-dev/: .dockerignore  Dockerfile  README.md  pyproject.toml
workspaces/dl-workspace-cpu/: Dockerfile  README.md  pyproject.toml
workspaces/dl-workspace-gpu/: .dockerignore  Dockerfile  README.md  pyproject.toml
workspaces/llm-workspace/: Dockerfile  README.md  pyproject.toml
workspaces/ml-workspace/: Dockerfile  README.md  pyproject.toml
workspaces/portable/: README.md
