[project]
name = "base-python-dev"
version = "0.1.0"
authors = [
    { name = "Chandramohan T N" }
]
description = "Base development environment"
dependencies = [
    "fastapi",
    "jupyterlab",
    "pyyaml",
    "orjson",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
