[project]
name = "llm-workspace"
version = "0.1.0"
authors = [
    { name = "Chandramohan T N" }
]
description = "LLM experimentation workspace"
dependencies = [
    "trl",
    "peft",
    "opensearch-py",
    "qdrant-client",
    "langgraph",
    "llama-index",
    "jupyterlab",
]

[project.optional-dependencies]
eval = [
    "ragas",
    "deepeval",
]
extra = [
    "jupyterlab-git",
]
